--- a/index.html
+++ b/index.html
@@ -35,13 +35,13 @@ Si
 </div>
 <div class="step-item thishide" style="display: none;">
 <div class="question-title ">
-¡ATENCIÓN! ¿Estás de acuerdo en respetar a las mujeres SCORTS que veras a continuación? Si conoces a alguien, no lo cuentes y no difundas Entre amigos.... </div>
+¡ATENCIÓN! Si deseas ver imágenes o vídeos gratis y reservar tu cita privada, debéis "REGISTRAROS" GRATIS PINCHANDO EN EL BOTÓN -ENTRAR- y rellenando el formulario, POR FAVOR! Si conoces a alguien, no se lo cuentes ni difundas rumores.. </div>
 <p>
 <b style="color: red;">
 </b>
 </p>
 <div class="buttons-block">
-<a href="https://shrlc.com/RWHsJj1" class="step-btn submit-btn tr-submit-button showmail">ESTOY DE ACUERDO
+<a href="https://shrlc.com/RWHsJj1" class="step-btn submit-btn tr-submit-button showmail">ENTRAR
 </a>
 </div>
 </div>
