--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ Si
 </div>
 <div class="step-item thishide" style="display: none;">
 <div class="question-title ">
-¡ATENCIÓN! Si deseas ver imágenes o vídeos gratis y reservar tu cita privada, debéis "REGISTRAROS" GRATIS PINCHANDO EN EL BOTÓN -ENTRAR- y rellenando el formulario, POR FAVOR! Si conoces a alguien, no se lo cuentes ni difundas rumores.. </div>
+¡ATENCIÓN! Si deseas verlas en vivo al desnudo  y reservar tu cita privada, debéis "REGISTRAROS" GRATIS PINCHANDO EN EL BOTÓN -ENTRAR- y rellenando el formulario, POR FAVOR! Si conoces a alguien, no se lo cuentes ni difundas rumores.. </div>
 <p>
 <b style="color: red;">
 </b>
